--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@ body{
 .top-navigation {
 	background-color: #15A9FE;
 	background: linear-gradient(to right, #1ACFFF, #0B62FE);
-
 	position: fixed;
 	width: 100%;
 }
@@ -41,6 +40,52 @@ h1{
 	vertical-align: -12px;
 	margin-right: -15px;
 	height: 50px;
+}
+
+.form-group {
+	padding-top: 126.219px;
+	text-align: center;
+}
+
+.form-group h2{
+	font-weight: 300;
+	font-size: 1.95em;
+}
+
+hr {
+	width: 50%;
+}
+
+input{
+	text-align: center;
+}
+
+#submit-button {
+	background-color: white;
+	
+    border: 2px solid transparent;
+    border-radius: 5px;
+    -moz-border-image: -moz-linear-gradient(right, #1ACFFF 0%, #0B62FE 100%);
+    -webkit-border-image: -webkit-linear-gradient(right, #1ACFFF 0%, #0B62FE 100%);
+    border-image: linear-gradient(to left, #0B62FE 0%, #1ACFFF 100%);
+    border-image-slice: 1;
+    
+    color: black;
+    padding: 10px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.7s; /* Safari */
+    transition-duration: 0.7s;
+    cursor: pointer;
+}
+
+#submit-button:hover{
+	border:none;
+	color: white;
+	background:linear-gradient(to right, #1ACFFF, #0B62FE);
 }
 
 @media (max-width: 360px){
