Added final styleing touches.

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ h1{
 	width: 30%;
 	height: 100vh;
 	padding-top: 98.219px;
-	background-color:gray; 
+	background-color:#B2B2B2; 
 	z-index: 10;
 }
 
